--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "clsx": "^1.1.1",
+    "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
-    "sass": "^1.49.9",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
@@ -48,6 +48,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.7"
+    "postcss": "^8.4.7",
+    "resolve-url-loader": "^5.0.0",
+    "sass-loader": "^12.6.0"
   }
 }
